--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
+ 
 <head>
-   <meta charset="UTF-8">
-   <title>Arjun Manikyath</title>
+   <link rel="stylesheet" href="mystyle.css">
+   <title> Main Page </title>
 </head>
+ 
 <body>
-   <p>Arjun Manikyath</p>
+<div class="box" style="text-align:center">
+    <div style="text-align:center" >
+        <h1 style="text-align:center">Welcome to My Website!</h1>
+        <h2 style="text-align:center">Full Name: Arjun Manikyath</h2>
+
+        <!--Arjun Manikyath
+            CISC474
+            Personal Web Page 1
+            arjunman@udel.edu -->
+            
+        <img src="pwpic.jpg" alt="Personal Photo" 
+         width="250" 
+         height="550">
+    </div> 
+
+    <div style="text-align:center">
+        <p>The name I go by in class: Arjun</p> 
+        <br>
+        <a href="	https://yang-yu-xing.github.io/">Previous Student</a>
+        <br>
+        <a href="	https://apeluso03.github.io/">Next Student</a>
+        <br>
+    
+        <a href="aboutMe.html">Link to About Me Page</a>
+    </div>
+
+</div>
+
 </body>
+ 
 </html>
