--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <br>
     
         <a href="aboutMe.html">Link to About Me Page</a>
+        <br>
+        <a href="https://mattm401.github.io/">Course Page!</a>
     </div>
 
 </div>
