--- a/index.html
+++ b/index.html
@@ -2,11 +2,24 @@
 <html lang="en-US">
  
 <head>
-   <link rel="stylesheet" href="mystyle.css">
+   <link rel="stylesheet" href="\style.css\mystyle.css">
    <title> Main Page </title>
 </head>
  
 <body>
+    <nav class="navbar">
+        <div class="navbar-links">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="aboutMe.html">About Me</a></li>
+            <li><a href="https://mattm401.github.io/">Course Page</a></li>
+            <li><a href="https://yang-yu-xing.github.io/">Previous Student</a></li>
+            <li><a href="https://apeluso03.github.io/">Next Student</a></li>
+            <li><a href="#about">Contact Form</a></li>
+
+          </ul>
+        </div>
+      </nav>
 <div class="box" style="text-align:center">
     <div style="text-align:center" >
         <h1 style="text-align:center">Welcome to My Website!</h1>
@@ -21,19 +34,6 @@
          width="250" 
          height="550">
     </div> 
-
-    <div style="text-align:center">
-        <p>The name I go by in class: Arjun</p> 
-        <br>
-        <a href="	https://yang-yu-xing.github.io/">Previous Student</a>
-        <br>
-        <a href="	https://apeluso03.github.io/">Next Student</a>
-        <br>
-    
-        <a href="aboutMe.html">Link to About Me Page</a>
-        <br>
-        <a href="https://mattm401.github.io/">Course Page!</a>
-    </div>
 
 </div>
 
