--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>About Me</title>
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="\style.css\mystyle.css">
+   <title> About Me Page </title>
 </head>
 <body>
+    <nav class="navbar">
+        <div class="navbar-links">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="aboutMe.html">About Me</a></li>
+            <li><a href="https://mattm401.github.io/">Course Page</a></li>
+            <li><a href="https://yang-yu-xing.github.io/">Previous Student</a></li>
+            <li><a href="https://apeluso03.github.io/">Next Student</a></li>
+            <li><a href="#about">Contact Form</a></li>
+
+          </ul>
+        </div>
+      </nav>
     <div style="text-align:center">
         <h1>About Me</h1>
         <h2>Get to know me a little more! </h2>
