email format + validation

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -13,7 +13,7 @@
             <li><a href="https://mattm401.github.io/">Course Page</a></li>
             <li><a href="https://yang-yu-xing.github.io/">Previous Student</a></li>
             <li><a href="https://apeluso03.github.io/">Next Student</a></li>
-            <li><a href="#about">Contact Form</a></li>
+            <li><a href="contact.html">Contact Form</a></li>
 
           </ul>
         </div>
