--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,18 @@
-<!Doctype html>
-<html>
-    <title >Contact Me!</title>
-    <link rel="stylesheet" href="\style.css\mystyle.css">
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script src="validation.js" type="text/javascript" defer></script>
-  </head>
-  <body>
-    <header>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Contact Form</title>
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="style.css/mystyle.css">
+        <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+        <script type="text/javascript">      (function () {
+            emailjs.init("5BiCDNRS3pOWRkn3f");
+    
+          })();
+        </script>
+    </head>
+    <body>
+        <!--Nav Bar-->
         <nav class="navbar">
             <div class="navbar-links">
               <ul>
@@ -15,40 +21,38 @@
                 <li><a href="https://mattm401.github.io/">Course Page</a></li>
                 <li><a href="https://yang-yu-xing.github.io/">Previous Student</a></li>
                 <li><a href="https://apeluso03.github.io/">Next Student</a></li>
-                <li><a href="contact.html">Contact Form</a></li>           
+                <li><a href="contact.html">Contact Form</a></li>
               </ul>
             </div>
-          </nav>
-    </header>
-    <section>
-        <div class="Contact-Form">
-            <h1>Contact Me</h1>
-            <p>Get in touch with me!</p>
-            <form id="contact-max">
-                <div class="group">
-                    <label for="user_fname">First Name</label>
-                    <input type="text" id="user_fname" name="user_fname" placeholder="First Name">
-                </div>
-                <div class="group">
-                    <label for="user_lname">Last Name</label>
-                    <input type="text" id="user_lname" name="user_lname" placeholder="Last Name">
-                </div>
-                <div class="group">
-                    <label for="user_email">Email</label>
-                    <input type="text" id="user_email" name="user_email" placeholder="Email">
-                </div>
-                <div class="group">
-                    <label for="user_phone">Phone</label>
-                    <input type="text" id="user_phone" name="user_phone" placeholder="Phone Number (Example 012-345-6789)">
-                </div>
-                <div class="group">
-                    <label for="user_message">What is your Message?</label>
-                    <input type="text" id="user_message" name="user_message" placeholder="Your Message">
-                </div>
-                <input type="submit" id="go" class="button" value="Submit">
-            </form>
-        </div>
-       </section>
-       <script src="validation.js"></script>
-  </body>
+          </nav>    
+        <!--Contact Form-->
+        <h1>Contact Me</h1>
+        <form id="contact-form">
+            <div class="form-group">
+                <label for="user_lname">Last Name</label>
+                <input type="text" id="user_lname" name="user_lname" required>
+            </div>
+            <div class="form-group">
+                <label for="user_fname">First Name</label>
+                <input type="text" id="user_fname" name="user_fname" required>
+            </div>
+            <div class="form-group">
+                <label for="user_email">Email Address</label>
+                <input type="email" id="user_email" name="user_email" required>
+            </div>
+            <div class="form-group">
+                <label for="user_phone">Phone Number</label>
+                <input type="tel" id="user_phone" name="user_phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+                <small>format: 123-456-7890</small>
+            </div>
+            <div class="form-group">
+                <label for="user_message">Message</label>
+                <textarea id="user_message" name="user_message" rows="4" required></textarea>
+            </div>
+            <div id="error-message" class="error-message"></div>
+            <button type="submit">Submit</button>
+        </form>
+        <div id="error"></div>
+        <script src="javascript/validation.js"></script>
+    </body>
 </html>
