--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <link rel="stylesheet" href="\style.css\mystyle.css">
+    <link rel="stylesheet" href="style.css\mystyle.css">
    <title> About Me Page </title>
 </head>
 <body>
