--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
  
 <head>
-   <link rel="stylesheet" href="\style.css\mystyle.css">
+   <link rel="stylesheet" href="style.css\mystyle.css">
    <title> Main Page </title>
 </head>
  
