--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,44 +1,59 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
-    <link rel="stylesheet" href="style.css\mystyle.css">
-   <title> About Me Page </title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5FRYZP3MKP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-5FRYZP3MKP');
+  </script>
+  <link rel="stylesheet" href="style.css\mystyle.css">
+  <title> About Me Page </title>
 </head>
+
 <body>
-    <nav class="navbar">
-        <div class="navbar-links">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class="active" href="aboutMe.html">About Me</a></li>
-            <li><a href="https://mattm401.github.io/">Course Page</a></li>
-            <li><a href="https://yang-yu-xing.github.io/">Previous Student</a></li>
-            <li><a href="https://apeluso03.github.io/">Next Student</a></li>
-            <li><a href="contact.html">Contact Form</a></li>
-
-          </ul>
-        </div>
-      </nav>
-    <div style="text-align:center">
-        <h1>About Me</h1>
-        <h2>Get to know me a little more! </h2>
-
-        <p>My name is Arjun. I'm a junior at UD majoring in computer science with a Cybersecurity concentration.
-         My favorite language to code in is Python, and I am a Yankees fan. </p>
-
-    </div style="text-align:center" >
-    <br>
-    <p>Some of my favorite things</p>
-    <ul>
-        <li>Going to the gym</li>
-        <li>Listening to music</li>
-        <li>Baseball</li>
-
-    </ul>
-    
-    <div style="text-align:center">
-
-        <p><strong>Interesting Fact: My all time squat PR is 395 lbs. </strong></p>
-
-        <a href="index.html">Back to Index</a>
-
+  <nav class="navbar">
+    <div class="navbar-links">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="aboutMe.html">About Me</a></li>
+        <li><a href="https://mattm401.github.io/">Course Page</a></li>
+        <li><a href="https://yang-yu-xing.github.io/">Previous Student</a></li>
+        <li><a href="https://apeluso03.github.io/">Next Student</a></li>
+        <li><a href="contact.html">Contact Form</a></li>
+        <li><a href="projects.html">Projects</a></li>
+      </ul>
     </div>
+  </nav>
+  <div style="text-align:center">
+    <h1>About Me</h1>
+    <h2>Get to know me a little more! </h2>
+
+    <p>My name is Arjun. I'm a junior at UD majoring in computer science with a Cybersecurity concentration.
+      My favorite language to code in is Python, and I am a Yankees fan. </p>
+
+  </div style="text-align:center">
+  <br>
+  <p>Some of my favorite things</p>
+  <ul>
+    <li>Going to the gym</li>
+    <li>Listening to music</li>
+    <li>Baseball</li>
+
+  </ul>
+
+  <div style="text-align:center">
+
+    <p><strong>Interesting Fact: My all time squat PR is 395 lbs. </strong></p>
+
+  </div>
+  </div>
+  <div class="footer">
+    <a href="https://github.com/arjunman0413"><i class="fa fa-github fa-2x"></i></a>
+    <a href="https://www.linkedin.com/in/arjun-manikyath-b74a9624b/"><i class="fa fa-linkedin fa-2x"></i></a>
+  </div>
+</body>
