--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5FRYZP3MKP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5FRYZP3MKP');
+</script>
     <title>Contact Me</title>
     <link rel="stylesheet" type="text/css" href="style.css/contact.css">
     <link rel="stylesheet" type="text/css" href="style.css/mystyle.css">
@@ -23,6 +32,7 @@
             <li><a href="https://yang-yu-xing.github.io/">Previous Student</a></li>
             <li><a href="https://apeluso03.github.io/">Next Student</a></li>
             <li><a href="contact.html">Contact Form</a></li>
+            <li><a href="projects.html">Projects</a></li>
           </ul>
         </div>
       </nav>
@@ -53,4 +63,8 @@
         <button type="submit">Submit</button>
     </form>
     <script src="javascript/validation.js"></script>
+    <div class="footer">
+        <a href="https://github.com/arjunman0413"><i class="fa fa-github fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/arjun-manikyath-b74a9624b/"><i class="fa fa-linkedin fa-2x"></i></a>
+    </div>
 </body>
