--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en-US">
  
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5FRYZP3MKP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5FRYZP3MKP');
+</script>
    <link rel="stylesheet" href="style.css\mystyle.css">
    <title> Main Page </title>
 </head>
@@ -16,7 +25,7 @@
             <li><a href="https://yang-yu-xing.github.io/">Previous Student</a></li>
             <li><a href="https://apeluso03.github.io/">Next Student</a></li>
             <li><a href="contact.html">Contact Form</a></li>
-
+            <li><a href="projects.html">Projects</a></li>
           </ul>
         </div>
       </nav>
@@ -30,13 +39,16 @@
             Personal Web Page 1
             arjunman@udel.edu -->
             
-        <img src="pwpic.jpg" alt="Personal Photo" 
+        <img src="images/pwpic.jpg" alt="Personal Photo" 
          width="250" 
          height="550">
     </div> 
 
 </div>
-
+<div class="footer">
+  <a href="https://github.com/arjunman0413"><i class="fa fa-github fa-2x"></i></a>
+  <a href="https://www.linkedin.com/in/arjun-manikyath-b74a9624b/"><i class="fa fa-linkedin fa-2x"></i></a>
+</div>
 </body>
  
 </html>
