css changes/overall changes

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
-<html lang="en-US">
-
+<html lang="en">
 <head>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-5FRYZP3MKP"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-
+  
     gtag('config', 'G-5FRYZP3MKP');
   </script>
-  <link rel="stylesheet" href="style.css\mystyle.css">
-  <title> About Me Page </title>
+     <link rel="stylesheet" href="style.css\mystyle.css">
+     <title> About Me </title>
 </head>
-
 <body>
   <nav class="navbar">
     <div class="navbar-links">
@@ -29,31 +27,49 @@
       </ul>
     </div>
   </nav>
-  <div style="text-align:center">
-    <h1>About Me</h1>
-    <h2>Get to know me a little more! </h2>
-
-    <p>My name is Arjun. I'm a junior at UD majoring in computer science with a Cybersecurity concentration.
-      My favorite language to code in is Python, and I am a Yankees fan. </p>
-
-  </div style="text-align:center">
+  <div class = "row" style="text-align:center">
+    <h1> Get to know me</h1>
+    <p>My name is Arjun Manikyath and I am a junior majoring in Computer Science at the Unversity of Delaware!
+      <br>
+      <br>
+      I also am concentrating in cybersecurity because encryption is very interesting to me. 
+      <br>
+      <br>
+      My favorite language to code in 
+      is Python and I am a huge Yankees fan.
+    </p>
+  </div>
   <br>
-  <p>Some of my favorite things</p>
-  <ul>
-    <li>Going to the gym</li>
-    <li>Listening to music</li>
-    <li>Baseball</li>
-
-  </ul>
-
-  <div style="text-align:center">
-
-    <p><strong>Interesting Fact: My all time squat PR is 395 lbs. </strong></p>
-
+  <br>
+  <br>
+  <br>
+  <div class = "favorites" style="text-align:center">
+    <h2>Some of my favorite things</h2>
+    <ul class = "favorites" style="text-align:center">
+      <li class = "favorites" style="text-align:center">Baseball</li>
+      <li class = "favorites" style="text-align:center">Gym</li>
+      <li class = "favorites" style="text-align:center">Listening to Music</li>
+    </ul>
   </div>
+	<div class="row">
+		<div>
+			<div class="column">
+				<img src="images/yankees.png" alt="Yankees" class="favpics">
+			</div>
+			<div class="column">
+				<img src="images/afterhours.jpg" alt="after hours" class="favpics">
+			</div>
+		</div>
+	</div>
+  <div class = "fun" style="text-align:center">
+    <h3>Fun Fact: My squat PR is 395 lbs</h3>
   </div>
-  <div class="footer">
-    <a href="https://github.com/arjunman0413"><i class="fa fa-github fa-2x"></i></a>
-    <a href="https://www.linkedin.com/in/arjun-manikyath-b74a9624b/"><i class="fa fa-linkedin fa-2x"></i></a>
-  </div>
+  <footer>
+    <p class="footer">
+      <a href="https://github.com/arjunman0413"><img src="images/github.png" alt="images/github.png" width="30" height="30"></a>
+      <a href="https://www.linkedin.com/in/arjun-manikyath-b74a9624b/"><img src="images/in.png" alt="https://www.linkedin.com/in/jacob-marks-68373b240/" width="30" height="30"></a>
+      <a href="mailto:arjunman@udel.edu"><img src="images/gmail.png" alt="jfmarks@udel.edu" width="30" height="30"></a>
+    </p>
+  </footer>
 </body>
+</html>
