--- a/index.html
+++ b/index.html
@@ -40,15 +40,24 @@
             arjunman@udel.edu -->
             
         <img src="images/pwpic.jpg" alt="Personal Photo" 
-         width="250" 
-         height="550">
-    </div> 
+         width="150" 
+         height="350">
+    </div>
+    <div class="row">
+			<object data='Resume.pdf' width="800" height="700">
+				<p>Your browser doesn't support PDFs!</p>
+				<p><a href="Resume.pdf">Download Instead</a></p>
+			</object>
+	</div>
 
 </div>
-<div class="footer">
-  <a href="https://github.com/arjunman0413"><i class="fa fa-github fa-2x"></i></a>
-  <a href="https://www.linkedin.com/in/arjun-manikyath-b74a9624b/"><i class="fa fa-linkedin fa-2x"></i></a>
-</div>
+<footer>
+  <p class="footer">
+    <a href="https://github.com/arjunman0413"><img src="images/github.png" alt="images/github.png" width="30" height="30"></a>
+    <a href="https://www.linkedin.com/in/arjun-manikyath-b74a9624b/"><img src="images/in.png" alt="https://www.linkedin.com/in/jacob-marks-68373b240/" width="30" height="30"></a>
+    <a href="mailto:arjunman@udel.edu"><img src="images/gmail.png" alt="jfmarks@udel.edu" width="30" height="30"></a>
+  </p>
+</footer>
 </body>
  
 </html>
