--- a/projects.html
+++ b/projects.html
@@ -48,9 +48,11 @@
             </p>
         </div>
       </div>
-      <div class="footer">
-        <a href="https://github.com/arjunman0413"><i class="fa fa-github fa-2x"></i></a>
-        <a href="https://www.linkedin.com/in/arjun-manikyath-b74a9624b/"><i class="fa fa-linkedin fa-2x"></i></a>
-    </div>
+      <footer>
+        <p class="footer">
+          <a href="https://github.com/arjunman0413"><img src="images/github.png" alt="images/github.png" width="30" height="30"></a>
+          <a href="https://www.linkedin.com/in/arjun-manikyath-b74a9624b/"><img src="images/in.png" alt="https://www.linkedin.com/in/jacob-marks-68373b240/" width="30" height="30"></a>
+        </p>
+      </footer>
 </body>
 </html>
