--- a/contact.html
+++ b/contact.html
@@ -63,8 +63,10 @@
         <button type="submit">Submit</button>
     </form>
     <script src="javascript/validation.js"></script>
-    <div class="footer">
-        <a href="https://github.com/arjunman0413"><i class="fa fa-github fa-2x"></i></a>
-        <a href="https://www.linkedin.com/in/arjun-manikyath-b74a9624b/"><i class="fa fa-linkedin fa-2x"></i></a>
-    </div>
+    <footer>
+        <p class="footer">
+          <a href="https://github.com/arjunman0413"><img src="images/github.png" alt="images/github.png" width="30" height="30"></a>
+          <a href="https://www.linkedin.com/in/arjun-manikyath-b74a9624b/"><img src="images/in.png" alt="https://www.linkedin.com/in/jacob-marks-68373b240/" width="30" height="30"></a>
+        </p>
+      </footer>
 </body>
