--- a/aboutMe.html
+++ b/aboutMe.html
@@ -19,14 +19,20 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a class="active" href="aboutMe.html">About Me</a></li>
-        <li><a href="https://mattm401.github.io/">Course Page</a></li>
-        <li><a href="https://yang-yu-xing.github.io/">Previous Student</a></li>
-        <li><a href="https://apeluso03.github.io/">Next Student</a></li>
         <li><a href="contact.html">Contact Form</a></li>
         <li><a href="projects.html">Projects</a></li>
-      </ul>
+        <div class="dropdown">
+          <button class="dropbtn">Class Links</button>
+          <div class="dropdown-content">
+            <a href="https://mattm401.github.io/">Course Page</a>
+            <a href="https://yang-yu-xing.github.io/">Previous Student</a>
+            <a href="https://apeluso03.github.io/">Next Student</a>
+          </div>
+        </div>
     </div>
   </nav>
+</div>
+</div>
   <div class = "row" style="text-align:center">
     <h1> Get to know me</h1>
     <p>My name is Arjun Manikyath and I am a junior majoring in Computer Science at the Unversity of Delaware!
