--- a/contact.html
+++ b/contact.html
@@ -23,19 +23,23 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="navbar-links">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class="active" href="aboutMe.html">About Me</a></li>
-            <li><a href="https://mattm401.github.io/">Course Page</a></li>
-            <li><a href="https://yang-yu-xing.github.io/">Previous Student</a></li>
-            <li><a href="https://apeluso03.github.io/">Next Student</a></li>
-            <li><a href="contact.html">Contact Form</a></li>
-            <li><a href="projects.html">Projects</a></li>
-          </ul>
+  <nav class="navbar">
+    <div class="navbar-links">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="aboutMe.html">About Me</a></li>
+        <li><a href="contact.html">Contact Form</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <div class="dropdown">
+          <button class="dropbtn">Class Links</button>
+          <div class="dropdown-content">
+            <a href="https://mattm401.github.io/">Course Page</a>
+            <a href="https://yang-yu-xing.github.io/">Previous Student</a>
+            <a href="https://apeluso03.github.io/">Next Student</a>
+          </div>
         </div>
-      </nav>
+    </div>
+  </nav>
     <h1>Contact Me</h1>
     <form id="contact-form">
         <div class="form-group">
@@ -67,6 +71,7 @@
         <p class="footer">
           <a href="https://github.com/arjunman0413"><img src="images/github.png" alt="images/github.png" width="30" height="30"></a>
           <a href="https://www.linkedin.com/in/arjun-manikyath-b74a9624b/"><img src="images/in.png" alt="https://www.linkedin.com/in/jacob-marks-68373b240/" width="30" height="30"></a>
+          <a href="mailto:arjunman@udel.edu"><img src="images/gmail.png" alt="jfmarks@udel.edu" width="30" height="30"></a>
         </p>
       </footer>
 </body>
