--- a/projects.html
+++ b/projects.html
@@ -14,35 +14,40 @@
          <title> Projects </title>
       </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar-links">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class="active" href="aboutMe.html">About Me</a></li>
-            <li><a href="https://mattm401.github.io/">Course Page</a></li>
-            <li><a href="https://yang-yu-xing.github.io/">Previous Student</a></li>
-            <li><a href="https://apeluso03.github.io/">Next Student</a></li>
-            <li><a href="contact.html">Contact Form</a></li>
-            <li><a href="projects.html">Projects</a></li>
-          </ul>
+  <nav class="navbar">
+    <div class="navbar-links">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="aboutMe.html">About Me</a></li>
+        <li><a href="contact.html">Contact Form</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <div class="dropdown">
+          <button class="dropbtn">Class Links</button>
+          <div class="dropdown-content">
+            <a href="https://mattm401.github.io/">Course Page</a>
+            <a href="https://yang-yu-xing.github.io/">Previous Student</a>
+            <a href="https://apeluso03.github.io/">Next Student</a>
+          </div>
         </div>
-      </nav>
+    </div>
+  </nav>
       <div><h1>Projects</h1></div>
       <P>The following are projects I have worked on by myself and with a group</P>
       <div class = "container">
         <div class = "card">
-            <img src = "images/GroupWebsite.png" alt = "group project" style = "width:100%;">
+            <img src = "images/GroupWebsite.png" alt = "group project" style = "width:25%;" class = "snake-img">
             <h3>Ekin!</h3>
             <p>This was a group project me and four other members worked on. It is a multipurpose Website
                 that functions as a shopping website for sports clothes. It utilizes databse methods to keep 
                 track of stock along with functional log in capabiltiy. 
             </p>
-            <a> href="https://github.com/275-Team-3/team3_Project"> Code Repository </a>
+            <a href="https://github.com/275-Team-3/team3_Project"> Code Repository </a>
         </div>
-        <div class = "card">
-            <img src = "images/snake.png" alt = "Python Snake" style = "width:100%;">
+        <div class = "card" margin-left="10px">
+            <img src = "images/snake.png" alt = "Python Snake" style = "width:25%;" class = "snake-img">
             <h3>Snake</h3>
-            <p>This project is fully designed in python with custom colors and pictures to represent the beloved
+            <p style="text-align: right;">
+               This project is fully designed in python with custom colors and pictures to represent the beloved
                 snake game. The snake is controlled with the "WASD" or arrow keys and a counter is used to track apples eaten.
                 Code is ran on Thonny!
             </p>
@@ -52,6 +57,7 @@
         <p class="footer">
           <a href="https://github.com/arjunman0413"><img src="images/github.png" alt="images/github.png" width="30" height="30"></a>
           <a href="https://www.linkedin.com/in/arjun-manikyath-b74a9624b/"><img src="images/in.png" alt="https://www.linkedin.com/in/jacob-marks-68373b240/" width="30" height="30"></a>
+          <a href="mailto:arjunman@udel.edu"><img src="images/gmail.png" alt="jfmarks@udel.edu" width="30" height="30"></a>
         </p>
       </footer>
 </body>
