--- a/index.html
+++ b/index.html
@@ -16,19 +16,23 @@
 </head>
  
 <body>
-    <nav class="navbar">
-        <div class="navbar-links">
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class="active" href="aboutMe.html">About Me</a></li>
-            <li><a href="https://mattm401.github.io/">Course Page</a></li>
-            <li><a href="https://yang-yu-xing.github.io/">Previous Student</a></li>
-            <li><a href="https://apeluso03.github.io/">Next Student</a></li>
-            <li><a href="contact.html">Contact Form</a></li>
-            <li><a href="projects.html">Projects</a></li>
-          </ul>
+  <nav class="navbar">
+    <div class="navbar-links">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a class="active" href="aboutMe.html">About Me</a></li>
+        <li><a href="contact.html">Contact Form</a></li>
+        <li><a href="projects.html">Projects</a></li>
+        <div class="dropdown">
+          <button class="dropbtn">Class Links</button>
+          <div class="dropdown-content">
+            <a href="https://mattm401.github.io/">Course Page</a>
+            <a href="https://yang-yu-xing.github.io/">Previous Student</a>
+            <a href="https://apeluso03.github.io/">Next Student</a>
+          </div>
         </div>
-      </nav>
+    </div>
+  </nav>
 <div class="box" style="text-align:center">
     <div style="text-align:center" >
         <h1 style="text-align:center">Welcome to My Website!</h1>
